# PlanningPoker

./: .env-example  .export.el  .gitignore  .pycheckers  README.org  bb.edn  main.py  pyproject.toml
backend/: config.py  main.py  websocket.py
pp-front/: README.md  deps.edn  package.json
pp-front/public/: index.html
pp-front/src/app/: core.cljs  core.css  db.cljs  handlers.cljs  subs.cljs  util.cljs  websockets.cljs
static/docs/: README.html
templates/: index.html
