[tool.poetry]
name = "planningpoker"
version = "0.1.0"
description = ""
authors = ["Oleksii Koval <alex@koval.kharkov.ua>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.112.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
