[tool.poetry]
name = "planningpoker"
version = "0.1.0"
description = ""
authors = ["Oleksii Koval <alex@koval.kharkov.ua>"]
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.112.1"}
google-auth = "^2.33.0"
authlib = "^1.3.1"
itsdangerous = "^2.2.0"
types-oauthlib = "^3.2.0.20240806"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.4.0"
jira = "^3.8.0"
markdown = "^3.7"
types-markdown = "^3.7.0.20240822"
websockets = "^13.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
